<resources>
    <string name="app_name">SmartPlayerApp</string>
    <string name="title_activity_login">Logowanie</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło (opcjonalnie)</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Zarejestruj</string>
    <string name="error_invalid_email">Podany email jest nieprawidłowy</string>
    <string name="error_incorrect_password">Podane hasło jest niepoprawne</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="login_failed">Logowanie nie powiodło się</string>
    <string name="login_loading">Logowanie...</string>

    <!-- Strings related to main activity -->
    <string name="start_event">Start rozgrywki</string>
    <string name="stop_event">Zatrzymanie rozgrywki</string>
    <string name="field_description">Boisko obrazek</string>
    <string name="choose_field">Wybierz boisko</string>
    <string name="field_text_in_choose_field_panel">boisko:</string>
    <string name="field_center_description">Środek boiska obrazek</string>
    <string name="players">Zawodnicy</string>
    <string name="add_player_description">Dodaj zawodnika obrazek</string>
    <string name="select_field_before_game_start">Przed wystartowaniem rozgrywki wybierz boisko!</string>
    <string name="add_player_before_game_start">Przed wystartowaniem rozgrywki dodaj choć jednego zawodnika!</string>
    <string name="retrieve_team_name_attempt_finish_failed">Nie udało się pobrać nazwy
        drużyny!</string>

    <!-- Strings related to enter opponent name dialog -->
    <string name="enter_opponent_name_dialog_title">Podaj nazwę drużyny przeciwnej</string>
    <string name="ok">Ok</string>
    <string name="given_team_name_is_empty">Nazwa drużyny przeciwnej nie może być pusta!</string>

    <!-- Strings related to player details -->
    <string name="weight">Waga:</string>
    <string name="height">Wzrost:</string>
    <string name="age">Wiek:</string>
    <string name="weight_measure">kg</string>
    <string name="height_measure">cm</string>
    <string name="distance">Dystans:</string>
    <string name="distance_measure">km</string>

    <!-- Strings related to choose field activities -->
    <string name="choose_field_label">Wybierz boisko:</string>
    <string name="create_field_description">Stwórz boisko obrazek</string>
    <string name="confirm">Zatwierdź</string>
    <string name="loading_fields">Wczytywanie boisk...</string>

    <!-- Strings related to create field activities -->
    <string name="name_field_label">Nazwa boiska:</string>
    <string name="go_to_selected_corner">Idź do zaznaczonego narożnika boiska i wczytaj
        współrzędne</string>
    <string name="enter_field_name">Wpisz nazwę boiska</string>
    <string name="next">Dalej</string>
    <string name="longitude">Dł.:</string>
    <string name="latitude">Szer.:</string>
    <string name="load_coordinates">Wczytaj współrzędne</string>
    <string name="you_must_load_coordinates">Najpierw wczytaj współrzędne</string>
    <string name="you_must_enter_field_name">Musiz wpisać nazwę boiska</string>
    <string name="creating_field">Tworzenie boiska...</string>
    <string name="device_found_location">Urządzenie odnalazło swoją lokalizację</string>
    <string name="wait_until_device_find_location">Poczekaj, aż urządzenie odnajdzie swoją
        lokalizację</string>

    <!-- Strings related to add player activities -->
    <string name="players_list_label">Dodawanie zawodnika</string>
    <string name="player_number_label">Numer zawodnika:</string>
    <string name="connect_with_device">Połącz z urządzeniem</string>
    <string name="unable_to_connect_by_bluetooth">Urzędzenie nie wspiera technologii
        Bluetooth</string>
    <string name="deny_turn_on_bluetooth">Nie zezwolono na włączenie Bluetooth</string>
    <string name="bluetooth_devices">Urządzenia bluetooth</string>
    <string name="connect">Połącz</string>
    <string name="found_device">Znaleziono urządzenie </string>
    <string name="connecting">Łączenie...</string>
    <string name="connected">Połączono</string>
    <string name="scanning">Skanowanie...</string>
    <string name="connection_failed">Nie udało się sparować z urządzeniem</string>
    <string name="cancel">Anuluj</string>
    <string name="choose_player">Wybierz zawodnika!</string>
    <string name="enter_correct_number">Wpisz poprawny numer zawodnika!</string>
    <string name="you_must_connect_with_device">Musisz być połączony z urządzeniem!</string>
    <string name="loading_players">Wczytywanie zawodników...</string>

    <!-- Strings related to mapping corners in api -->
    <string name="corner_0">leftDown</string>
    <string name="corner_1">leftUp</string>
    <string name="corner_2">rightUp</string>
    <string name="corner_3">rightDown</string>

    <!-- Strings related to invalid connect with api dialog -->
    <string name="invalid_connect_with_api_information">Nie udało połączyć się z serwerem.
        Ponowić próbę połączenia? (sprawdź połączenie z internetem)</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="send_result_failed">Nie udało się przesłać wyników na serwer.</string>
</resources>
