<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/colorBackground"
    android:paddingVertical="20dp"
    android:gravity="center"
    android:id="@+id/main_container">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/field_view"
                    android:layout_width="455dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/field_description"
                    app:srcCompat="@drawable/field" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/start_stop_event_and_player_details_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/start_stop_event_container"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondaryBackground"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/start_stop_event_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_above="@+id/start_stop_event_button"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:text="@string/start_event"
                        android:textColor="@color/colorPrimaryButtonText" />

                    <ImageButton
                        android:id="@+id/start_stop_event_button"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="bottom"
                        android:background="@drawable/start_event_bg" />

                </RelativeLayout>

                <View
                    android:id="@+id/break_view"
                    android:layout_width="50dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/player_details_container"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondaryBackground">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_panel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/choose_field_container"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="@color/colorSecondaryBackground"
                android:paddingVertical="10dp">

                <RelativeLayout
                    android:id="@+id/field_center_container"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true">

                    <ImageView
                        android:id="@+id/field_center_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/field_center"
                        android:contentDescription="@string/field_center_description"></ImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/field_text_in_choose_field_panel"
                            android:textColor="@color/colorPrimaryButtonText" />

                        <TextView
                            android:id="@+id/field_name_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="CSA PG"
                            android:textColor="@color/colorPrimaryButtonText" />
                    </LinearLayout>

                </RelativeLayout>

                <Button
                    android:id="@+id/choose_field_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/field_center_container"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryButton"
                    android:text="@string/choose_field"
                    android:textColor="@color/colorPrimaryButtonText"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:id="@+id/space_between_choose_field_and_player_list"
                android:layout_width="wrap_content"
                android:layout_height="10dp"></View>

            <LinearLayout
                android:id="@+id/players_list_container"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:background="@color/colorSecondaryBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:text="@string/players"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryButtonText" />

                <ListView
                    android:id="@+id/players_list_view"
                    android:layout_width="wrap_content"
                    android:layout_height="168dp"></ListView>

                <LinearLayout
                    android:id="@+id/add_player_button_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/add_player_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/add_player"
                        android:contentDescription="@string/add_player_description" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>