<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".field.ChooseFieldActivity"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:id="@+id/main_container"
    android:paddingVertical="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondaryBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_field_label"
                android:textColor="@color/colorPrimaryButtonText"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:background="@color/colorInputFill"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorInputText" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/field_view"
                    android:layout_width="455dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/field_description"
                    app:srcCompat="@drawable/field_left_down" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="30sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/go_to_selected_corner"
                        android:textColor="@color/colorPrimaryButtonText"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_marginBottom="30sp"/>

                    <Button
                        android:id="@+id/next_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/field_center_container"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimaryButton"
                        android:text="@string/next"
                        android:textColor="@color/colorPrimaryButtonText"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude"
                        android:textColor="@color/colorPrimaryButtonText"
                        android:textSize="16sp"
                        android:layout_marginRight="5sp"/>
                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:background="@color/colorInputFill"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorInputText"
                        android:layout_marginRight="10sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude"
                        android:textColor="@color/colorPrimaryButtonText"
                        android:textSize="16sp"
                        android:layout_marginRight="5sp"/>
                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:background="@color/colorInputFill"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorInputText"
                        android:layout_marginRight="10sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude"
                        android:textColor="@color/colorPrimaryButtonText"
                        android:textSize="16sp"
                        android:layout_marginRight="5sp"/>
                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:background="@color/colorInputFill"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorInputText"
                        android:layout_marginRight="10sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude"
                        android:textColor="@color/colorPrimaryButtonText"
                        android:textSize="16sp"
                        android:layout_marginRight="5sp"/>
                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:background="@color/colorInputFill"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorInputText"
                        android:layout_marginRight="10sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude"
                        android:textColor="@color/colorPrimaryButtonText"
                        android:textSize="16sp"
                        android:layout_marginRight="5sp"/>
                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:background="@color/colorInputFill"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorInputText"
                        android:layout_marginRight="10sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude"
                        android:textColor="@color/colorPrimaryButtonText"
                        android:textSize="16sp"
                        android:layout_marginRight="5sp"/>
                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:background="@color/colorInputFill"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorInputText"
                        android:layout_marginRight="10sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude"
                        android:textColor="@color/colorPrimaryButtonText"
                        android:textSize="16sp"
                        android:layout_marginRight="5sp"/>
                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:background="@color/colorInputFill"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorInputText"
                        android:layout_marginRight="10sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude"
                        android:textColor="@color/colorPrimaryButtonText"
                        android:textSize="16sp"
                        android:layout_marginRight="5sp"/>
                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:background="@color/colorInputFill"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorInputText"
                        android:layout_marginRight="10sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>